--- a/samples/ClientSideBlazor/wwwroot/index.html
+++ b/samples/ClientSideBlazor/wwwroot/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ClientSideBlazor</title>
+    <title>Blazored FluentValidation - Blazor WebAssembly App</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
