--- a/samples/BlazorWebAssembly/wwwroot/index.html
+++ b/samples/BlazorWebAssembly/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-
+    <link href="BlazorWebAssembly.styles.css" rel="stylesheet" />
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+    <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
